// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Technology Details Page render correctly when user is logged in 1`] = `
.c17 {
  background-color: hsl(166,100%,34%);
  color: hsla(0,0%,100%);
  border-radius: 0.5rem;
  border: none;
  font-size: 2.2rem;
  text-transform: uppercase;
  padding: 1.8rem 6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.c17:hover {
  opacity: 0.8;
}

.c18 {
  background-color: hsla(204,70%,53%);
  color: hsla(0,0%,100%);
  border-radius: 0.5rem;
  border: none;
  font-size: 2.2rem;
  text-transform: uppercase;
  padding: 1.8rem 6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.c18:hover {
  opacity: 0.8;
}

.c19 {
  -webkit-tap-highlight-color: transparent;
}

.c22 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 3.2rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,40%);
  cursor: pointer;
  background: hsla(0,0%,100%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
}

.c22:first-child {
  border-left-color: transparent;
}

.c22:last-child {
  border-right-color: transparent;
}

.c22:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c22:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c21 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 3.2rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,52%);
  cursor: pointer;
  background: hsl(0,0%,93%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
}

.c21:first-child {
  border-left-color: transparent;
}

.c21:last-child {
  border-right-color: transparent;
}

.c21:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c21:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c24 {
  display: block;
}

.c23 {
  display: none;
}

.c20 {
  padding: 0;
}

.c36 {
  background-color: hsla(0,0%,98%);
  padding: 9rem 5%;
}

.c26 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c37 {
  padding: 0 3rem;
  margin-bottom: 9rem;
  text-align: center;
  text-align: center;
}

.c37 span {
  font-weight: bold;
}

.c40 {
  color: hsla(0,0%,7%);
}

.c40:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
}

.c12 span {
  display: inline-block;
  font-size: 1.6rem;
  color: hsla(0,0%,40%);
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c12 svg {
  width: 3rem;
  height: 3rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c12 svg:hover {
  -webkit-animation: 1.5s jBAKzd;
  animation: 1.5s jBAKzd;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,0%,100%);
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.c39:hover {
  -webkit-transform: translateY(-0.7rem);
  -ms-transform: translateY(-0.7rem);
  transform: translateY(-0.7rem);
}

.c41 {
  width: 100%;
  padding-top: 65%;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  overflow: hidden;
  position: relative;
}

.c41 img {
  width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c42 {
  position: absolute;
  left: 2rem;
  padding: 0.7rem 2.2rem;
  text-transform: uppercase;
  border-radius: 0.5rem;
  box-shadow: 0rem 0rem 1rem hsla(0,0%,40%);
  font-size: 1.4rem;
  bottom: 2rem;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 2rem;
  font-weight: 400;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c45 span {
  text-transform: uppercase;
  color: hsla(0,0%,40%);
  font-size: 1.3rem;
  margin-left: 0.5rem;
}

.c45 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c46 {
  margin-bottom: 3rem;
  min-height: 7.6rem;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 1.4rem;
  padding: 2rem 0;
  border-top: 0.1rem solid hsla(0,0%,93%);
}

.c48 {
  font-weight: 400;
  color: hsla(0,0%,7%);
  text-transform: uppercase;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c49 span {
  color: hsl(166,100%,34%);
  margin-left: 0.5rem;
  display: block;
}

.c49 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
  background: transparent;
  border: none;
}

.c11 svg {
  width: 3rem;
  height: 3rem;
}

.c11 svg:hover {
  -webkit-animation: jBAKzd 1.5s;
  animation: jBAKzd 1.5s;
}

.c5 {
  width: 450px;
  max-width: 100%;
  margin: 1rem 1rem 1rem 0;
}

.c5 .slick-prev,
.c5 .slick-next {
  width: 34px;
  height: 34px;
  position: absolute;
  z-index: 1;
  border-radius: 50%;
  background-color: hsl(0deg 0% 0% / 17%);
  color: hsla(0,0%,100%);
  stroke-width: 1.2;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c5 .slick-prev:hover,
.c5 .slick-next:hover {
  background-color: hsl(0deg 0% 0% / 70%);
}

.c5 .slick-prev {
  left: 6px;
}

.c5 .slick-next {
  right: 6px;
}

.c5 .slick-prev:before,
.c5 .slick-next:before {
  color: hsla(0,0%,40%);
  font-size: 34px;
}

.c5 .slick-dots {
  bottom: 10px;
}

.c5 .slick-dots li button {
  width: 20px;
  height: 20px;
}

.c5 .slick-dots li button:before {
  content: '';
  display: inline-block;
  background-color: hsla(0,0%,100%);
  border: 4px solid hsla(0,0%,100%);
  border-radius: 50%;
  margin: 0 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c5 .slick-dots li.slick-active button:before {
  background-color: hsla(4,85%,57%);
}

.c6 {
  margin: 0 auto;
  width: 100%;
  max-width: 100%;
  height: auto;
  border-radius: 0.3rem;
}

.c3 {
  color: hsl(166,100%,34%);
  border-bottom: 1px solid hsl(0,0%,93%);
  text-align: start;
  font-size: 2.8rem;
  font-weight: 600;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
  margin: 0;
}

.c9 {
  color: hsl(166,100%,34%);
  text-align: start;
  font-size: 2.8rem;
  font-weight: 600;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  font-weight: 300;
  color: hsla(204,7%,15%);
  padding: 1rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem 0;
}

.c15 p {
  font-size: 1.8rem;
  font-weight: 300;
  text-transform: uppercase;
  color: hsla(204,7%,15%);
}

.c15 h5 {
  font-weight: 700;
  font-size: 2rem;
  text-align: center;
  color: hsla(29,94%,62%);
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c16 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
}

.c16 button:first-child {
  margin-right: 5px;
}

.c16 button:last-child {
  margin-right: 5px;
}

.c1 {
  box-shadow: 0 0 9rem -1.5rem hsla(0,0%,100%,0.07);
  border: none;
  border-radius: 0.5rem;
  background-color: hsla(0,0%,100%);
  width: 100%;
  z-index: 100;
}

.c1 .ais-SearchBox-form {
  padding: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 .ais-SearchBox-input {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.8rem 2rem;
  margin-right: 3rem;
  border: 0.1rem solid hsla(0,0%,95%);
  border-radius: 0.5rem;
  background-color: hsla(0,0%,95%);
  font-size: 2.7rem;
  line-height: 1.9rem;
  color: hsla(204,7%,15%);
}

.c1 .ais-SearchBox-submit {
  background-color: hsla(29,94%,62%);
  border-radius: 0.5rem;
  border: none;
  font-size: 2.2rem;
  padding: 1.8rem 6rem;
  display: inline-block;
}

.c1 .ais-SearchBox-submit:hover {
  opacity: 0.8;
}

.c1 .ais-SearchBox-submitIcon {
  fill: hsla(0,0%,100%);
  stroke: hsla(0,0%,100%);
  width: 1.5rem;
  height: 1.5rem;
}

.c1 .ais-SearchBox-reset {
  display: none;
}

.c0 {
  border: 2rem solid hsl(166,100%,34%);
}

.c27 {
  margin: 0 1rem;
  padding: 2rem 0;
}

.c28 {
  border-bottom: 4px solid hsla(29,94%,62%);
  width: 100%;
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c28:first-child {
  margin-top: 0;
}

.c28 h4 {
  display: inline-block;
  background-color: hsla(29,94%,62%);
  color: hsla(0,0%,100%);
  padding: 2.5rem 3rem;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 2rem;
  text-transform: uppercase;
  margin-bottom: -4px;
}

.c29 {
  display: block;
  font-weight: 500;
  font-size: 1.4rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
  color: hsla(0,0%,40%);
}

.c29:not(:first-child) {
  margin-top: 1rem;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c30 {
  display: grid;
  grid-template-columns: repeat(auto-fill,30%);
  grid-gap: 1rem;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 > * {
  margin-bottom: 1rem;
}

.c31 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 > * {
  margin-bottom: 1rem;
}

.c34 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c32 {
  width: 100%;
  -webkit-filter: opacity(0.7);
  filter: opacity(0.7);
}

.c35 {
  color: hsla(0,0%,7%);
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 0rem;
  margin-bottom: 1rem;
  background-color: transparent;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: hsla(0,0%,100%);
}

.c25 > *:not(:first-child):not(:last-child) {
  margin: 0 1rem;
}

.c38 {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(32rem,1fr));
  grid-gap: 5rem 3rem;
}

.c2 {
  padding: 2rem;
  background-color: hsla(0,0%,98%);
}

@media (max-width:768px) {
  .c17 {
    font-size: 1.6rem;
    padding: 1.4rem 6rem;
  }
}

@media (max-width:768px) {
  .c18 {
    font-size: 1.6rem;
    padding: 1.4rem 6rem;
  }
}

@media (max-width:768px) {
  .c36 {
    padding: 6rem 1%;
  }
}

@media (max-width:1170px) {

}

@media (max-width:1170px) {
  .c26 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c26 {
    margin: 0;
  }
}

@media (max-width:1170px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c37 {
    font-size: 3rem;
    margin-bottom: 6rem;
  }
}

@media screen and (max-width:768px) {

}

@media (max-width:450px) {

}

@media (max-width:768px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:450px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:450px) {
  .c10 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c9 {
    margin-top: 1rem;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:768px) {
  .c7 {
    padding: 1rem;
  }
}

@media (min-width:1170px) {
  .c7 {
    padding: 2rem;
  }
}

@media (max-width:768px) {
  .c15 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c15 p {
    margin-right: 0.5rem;
  }
}

@media (max-width:768px) {
  .c16 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c16 button {
    margin: 5px 0;
  }
}

@media (max-width:768px) {
  .c1 .ais-SearchBox-form {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 2rem;
  }

  .c1 .ais-SearchBox-submit {
    font-size: 1.6rem;
    padding: 1.4rem 6rem;
  }

  .c1 .ais-SearchBox-input {
    margin-right: 0;
    margin-bottom: 1rem;
    font-size: 1.6rem;
    padding: 1.4rem 2rem;
  }
}

@media (max-width:768px) {

}

@media (max-width:450px) {

}

@media (max-width:450px) {

}

@media (max-width:768px) {

}

@media (max-width:450px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {

}

@media (max-width:450px) {
  .c30 {
    grid-template-columns: repeat(auto-fill,100%);
  }
}

@media (max-width:1170px) {
  .c25 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c25 > *:not(:first-child):not(:last-child) {
    margin-top: 1.5rem;
  }
}

@media (max-width:768px) {
  .c38 {
    padding: 0 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding: 6rem 4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="ais-SearchBox c1"
    >
      <form
        action=""
        class="ais-SearchBox-form"
        novalidate=""
        role="search"
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input"
          maxlength="512"
          placeholder="Qual solução você busca?"
          required=""
          spellcheck="false"
          type="search"
          value=""
        />
        <button
          class="ais-SearchBox-submit"
          title="Submeta sua consulta"
          type="submit"
        >
          <svg
            class="ais-SearchBox-submitIcon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset"
          hidden=""
          title="Clear the search query."
          type="reset"
        >
          <svg
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
  <div
    class="c2"
  >
    <h1
      class="c3"
    >
      Agebavzi niko zaro.
    </h1>
    <div
      class="c4"
    >
      <div
        aria-label="Carrossel com imagens da tecnologia"
        role="listbox"
      >
        <div
          class="slick-slider c5 slick-initialized"
        >
          
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    class="c6"
                    src="http://127.0.0.1:3333/uploads/technologies/image.png"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          
          
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <h2
            class="c9"
          >
            Agebavzi niko zaro.
          </h2>
          <div
            class="c10"
          >
            <button
              aria-label="share"
              class="c11"
            >
              <svg
                class=""
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
                />
              </svg>
            </button>
            <div
              class="c12"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                />
              </svg>
              <span>
                1
              </span>
            </div>
          </div>
        </div>
        <p
          class="c13"
        >
          Gec hik gir.
        </p>
        <div
          class="c14"
        >
          <div
            class="c15"
          >
            <p>
              Custo de Implantação:
            </p>
            <h5>
              R$ 945.368.480,00
            </h5>
          </div>
          <div
            class="c16"
          >
            <button
              class="c17"
              color="hsla(0, 0%, 100%)"
              name="buyTechnology"
              title=""
              type="button"
            >
              Quero Adquirir Essa Tecnologia
            </button>
            <button
              class="c18"
              color="hsla(0, 0%, 100%)"
              name=""
              title=""
              type="button"
            >
              Quero Suporte Para Essa Tecnologia
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c19"
      data-tabs="true"
    >
      <ul
        class="c20"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="about"
          id="react-tabs-0"
          role="tab"
        >
          Sobre a Tecnologia
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="description"
          id="react-tabs-2"
          role="tab"
        >
          Caracterização
        </li>
        <li
          aria-controls="react-tabs-5"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="geolocation"
          id="react-tabs-4"
          role="tab"
        >
          Georeferenciamento
        </li>
        <li
          aria-controls="react-tabs-7"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="costs"
          id="react-tabs-6"
          role="tab"
        >
          Custos e Financiamento
        </li>
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="review"
          id="react-tabs-8"
          role="tab"
        >
          Relatos de Experiência
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="true"
          class="c22 react-tabs__tab--selected"
          data-testid="attachments"
          id="react-tabs-10"
          role="tab"
          tabindex="0"
        >
          Documentos
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-0"
        class="c23"
        id="react-tabs-1"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-2"
        class="c23"
        id="react-tabs-3"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-4"
        class="c23"
        id="react-tabs-5"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-6"
        class="c23"
        id="react-tabs-7"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-8"
        class="c23"
        id="react-tabs-9"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-10"
        class="c24 react-tabs__tab-panel--selected"
        id="react-tabs-11"
        role="tabpanel"
      >
        <div
          class="c25"
        >
          <div
            class="c26"
          >
            <div
              class="c27"
            >
              <div
                class="c28"
                color="primary"
              >
                <h4>
                  Fotos
                </h4>
              </div>
              <span
                class="c29"
              >
                Fotos da Tecnologia
              </span>
              <div
                class="styles__UploadedImages-sc-13jh09q-9 c30"
              >
                <div
                  class="styles__IconRow-sc-13jh09q-15 c31"
                >
                  <img
                    class="styles__Media-sc-13jh09q-14 c32"
                    src="http://127.0.0.1:3333/uploads/technologies/image.png"
                  />
                </div>
              </div>
            </div>
            <div
              class="c27"
            >
              <div
                class="c28"
                color="primary"
              >
                <h4>
                  Documentos
                </h4>
              </div>
              <span
                class="c29"
              >
                Documentos
              </span>
              <div
                class="styles__UploadedDocuments-sc-13jh09q-8 c33"
              >
                <div
                  class="styles__IconRow-sc-13jh09q-15 c34"
                >
                  <a
                    class="styles__IconLink-sc-13jh09q-2 c35"
                    href="http://127.0.0.1:3333/uploads/technologies/image-1.pdf"
                  >
                    <svg
                      fill="currentColor"
                      height="2rem"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 384 512"
                      width="2rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"
                      />
                    </svg>
                     
                    image-1.pdf
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c36"
  >
    <h2
      class="c37"
    >
      common:relatedSolutions
    </h2>
    <div
      class="c38"
      data-testid="cards-wrapper"
    >
      <div
        class="c39"
      >
        <a
          class="c40"
          href="/t/agebavzi-niko-zaro"
          target="_self"
        >
          <div
            class="c41"
          >
            <img
              alt="Agebavzi niko zaro."
              src="card-image.jpg"
            />
            <div
              class="c42"
            >
              Tecnologias Sociais
            </div>
          </div>
        </a>
        <div
          class="c43"
        >
          <div
            class="c44"
          >
            <div
              class="c45"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                />
              </svg>
              <span>
                card:privateTechnology
              </span>
            </div>
            <div
              data-testid="card-heart"
            >
              <div
                class="c12"
              >
                <svg
                  color="hsl(166, 100%, 34%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(0, 0, 0);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
                <span>
                  1
                </span>
              </div>
            </div>
          </div>
          <a
            class="c40"
            href="/t/agebavzi-niko-zaro"
            target="_self"
          >
            <h3
              class="c46"
              data-testid="card-title"
            >
              Agebavzi niko zaro.
            </h3>
          </a>
          <div
            class="c47"
          >
            <span
              class="c48"
            >
              card:notDefinedInstitution
            </span>
            <div
              class="c49"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                />
              </svg>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Technology Details Page render correctly when user is not logged in 1`] = `
.c17 {
  background-color: hsl(166,100%,34%);
  color: hsla(0,0%,100%);
  border-radius: 0.5rem;
  border: none;
  font-size: 2.2rem;
  text-transform: uppercase;
  padding: 1.8rem 6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.c17:hover {
  opacity: 0.8;
}

.c18 {
  background-color: hsla(204,70%,53%);
  color: hsla(0,0%,100%);
  border-radius: 0.5rem;
  border: none;
  font-size: 2.2rem;
  text-transform: uppercase;
  padding: 1.8rem 6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

.c18:hover {
  opacity: 0.8;
}

.c19 {
  -webkit-tap-highlight-color: transparent;
}

.c22 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 3.2rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,40%);
  cursor: pointer;
  background: hsla(0,0%,100%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
}

.c22:first-child {
  border-left-color: transparent;
}

.c22:last-child {
  border-right-color: transparent;
}

.c22:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c22:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c21 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 3.2rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,52%);
  cursor: pointer;
  background: hsl(0,0%,93%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
}

.c21:first-child {
  border-left-color: transparent;
}

.c21:last-child {
  border-right-color: transparent;
}

.c21:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c21:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c24 {
  display: block;
}

.c23 {
  display: none;
}

.c20 {
  padding: 0;
}

.c36 {
  background-color: hsla(0,0%,98%);
  padding: 9rem 5%;
}

.c26 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c37 {
  padding: 0 3rem;
  margin-bottom: 9rem;
  text-align: center;
  text-align: center;
}

.c37 span {
  font-weight: bold;
}

.c40 {
  color: hsla(0,0%,7%);
}

.c40:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
}

.c12 span {
  display: inline-block;
  font-size: 1.6rem;
  color: hsla(0,0%,40%);
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c12 svg {
  width: 3rem;
  height: 3rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c12 svg:hover {
  -webkit-animation: 1.5s jBAKzd;
  animation: 1.5s jBAKzd;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,0%,100%);
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.c39:hover {
  -webkit-transform: translateY(-0.7rem);
  -ms-transform: translateY(-0.7rem);
  transform: translateY(-0.7rem);
}

.c41 {
  width: 100%;
  padding-top: 65%;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  overflow: hidden;
  position: relative;
}

.c41 img {
  width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c42 {
  position: absolute;
  left: 2rem;
  padding: 0.7rem 2.2rem;
  text-transform: uppercase;
  border-radius: 0.5rem;
  box-shadow: 0rem 0rem 1rem hsla(0,0%,40%);
  font-size: 1.4rem;
  bottom: 2rem;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 2rem;
  font-weight: 400;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c45 span {
  text-transform: uppercase;
  color: hsla(0,0%,40%);
  font-size: 1.3rem;
  margin-left: 0.5rem;
}

.c45 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c46 {
  margin-bottom: 3rem;
  min-height: 7.6rem;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 1.4rem;
  padding: 2rem 0;
  border-top: 0.1rem solid hsla(0,0%,93%);
}

.c48 {
  font-weight: 400;
  color: hsla(0,0%,7%);
  text-transform: uppercase;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c49 span {
  color: hsl(166,100%,34%);
  margin-left: 0.5rem;
  display: block;
}

.c49 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
  background: transparent;
  border: none;
}

.c11 svg {
  width: 3rem;
  height: 3rem;
}

.c11 svg:hover {
  -webkit-animation: jBAKzd 1.5s;
  animation: jBAKzd 1.5s;
}

.c5 {
  width: 450px;
  max-width: 100%;
  margin: 1rem 1rem 1rem 0;
}

.c5 .slick-prev,
.c5 .slick-next {
  width: 34px;
  height: 34px;
  position: absolute;
  z-index: 1;
  border-radius: 50%;
  background-color: hsl(0deg 0% 0% / 17%);
  color: hsla(0,0%,100%);
  stroke-width: 1.2;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c5 .slick-prev:hover,
.c5 .slick-next:hover {
  background-color: hsl(0deg 0% 0% / 70%);
}

.c5 .slick-prev {
  left: 6px;
}

.c5 .slick-next {
  right: 6px;
}

.c5 .slick-prev:before,
.c5 .slick-next:before {
  color: hsla(0,0%,40%);
  font-size: 34px;
}

.c5 .slick-dots {
  bottom: 10px;
}

.c5 .slick-dots li button {
  width: 20px;
  height: 20px;
}

.c5 .slick-dots li button:before {
  content: '';
  display: inline-block;
  background-color: hsla(0,0%,100%);
  border: 4px solid hsla(0,0%,100%);
  border-radius: 50%;
  margin: 0 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c5 .slick-dots li.slick-active button:before {
  background-color: hsla(4,85%,57%);
}

.c6 {
  margin: 0 auto;
  width: 100%;
  max-width: 100%;
  height: auto;
  border-radius: 0.3rem;
}

.c3 {
  color: hsl(166,100%,34%);
  border-bottom: 1px solid hsl(0,0%,93%);
  text-align: start;
  font-size: 2.8rem;
  font-weight: 600;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
  margin: 0;
}

.c9 {
  color: hsl(166,100%,34%);
  text-align: start;
  font-size: 2.8rem;
  font-weight: 600;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  font-weight: 300;
  color: hsla(204,7%,15%);
  padding: 1rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem 0;
}

.c15 p {
  font-size: 1.8rem;
  font-weight: 300;
  text-transform: uppercase;
  color: hsla(204,7%,15%);
}

.c15 h5 {
  font-weight: 700;
  font-size: 2rem;
  text-align: center;
  color: hsla(29,94%,62%);
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c16 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
}

.c16 button:first-child {
  margin-right: 5px;
}

.c16 button:last-child {
  margin-right: 5px;
}

.c1 {
  box-shadow: 0 0 9rem -1.5rem hsla(0,0%,100%,0.07);
  border: none;
  border-radius: 0.5rem;
  background-color: hsla(0,0%,100%);
  width: 100%;
  z-index: 100;
}

.c1 .ais-SearchBox-form {
  padding: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 .ais-SearchBox-input {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.8rem 2rem;
  margin-right: 3rem;
  border: 0.1rem solid hsla(0,0%,95%);
  border-radius: 0.5rem;
  background-color: hsla(0,0%,95%);
  font-size: 2.7rem;
  line-height: 1.9rem;
  color: hsla(204,7%,15%);
}

.c1 .ais-SearchBox-submit {
  background-color: hsla(29,94%,62%);
  border-radius: 0.5rem;
  border: none;
  font-size: 2.2rem;
  padding: 1.8rem 6rem;
  display: inline-block;
}

.c1 .ais-SearchBox-submit:hover {
  opacity: 0.8;
}

.c1 .ais-SearchBox-submitIcon {
  fill: hsla(0,0%,100%);
  stroke: hsla(0,0%,100%);
  width: 1.5rem;
  height: 1.5rem;
}

.c1 .ais-SearchBox-reset {
  display: none;
}

.c0 {
  border: 2rem solid hsl(166,100%,34%);
}

.c27 {
  margin: 0 1rem;
  padding: 2rem 0;
}

.c28 {
  border-bottom: 4px solid hsla(29,94%,62%);
  width: 100%;
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c28:first-child {
  margin-top: 0;
}

.c28 h4 {
  display: inline-block;
  background-color: hsla(29,94%,62%);
  color: hsla(0,0%,100%);
  padding: 2.5rem 3rem;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 2rem;
  text-transform: uppercase;
  margin-bottom: -4px;
}

.c29 {
  display: block;
  font-weight: 500;
  font-size: 1.4rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
  color: hsla(0,0%,40%);
}

.c29:not(:first-child) {
  margin-top: 1rem;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c30 {
  display: grid;
  grid-template-columns: repeat(auto-fill,30%);
  grid-gap: 1rem;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 > * {
  margin-bottom: 1rem;
}

.c31 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 > * {
  margin-bottom: 1rem;
}

.c34 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c32 {
  width: 100%;
  -webkit-filter: opacity(0.7);
  filter: opacity(0.7);
}

.c35 {
  color: hsla(0,0%,7%);
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 0rem;
  margin-bottom: 1rem;
  background-color: transparent;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: hsla(0,0%,100%);
}

.c25 > *:not(:first-child):not(:last-child) {
  margin: 0 1rem;
}

.c38 {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(32rem,1fr));
  grid-gap: 5rem 3rem;
}

.c2 {
  padding: 2rem;
  background-color: hsla(0,0%,98%);
}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c17 {
    font-size: 1.6rem;
    padding: 1.4rem 6rem;
  }
}

@media (max-width:768px) {
  .c18 {
    font-size: 1.6rem;
    padding: 1.4rem 6rem;
  }
}

@media (max-width:768px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c36 {
    padding: 6rem 1%;
  }
}

@media (max-width:1170px) {

}

@media (max-width:1170px) {
  .c26 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c26 {
    margin: 0;
  }
}

@media (max-width:1170px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c37 {
    font-size: 3rem;
    margin-bottom: 6rem;
  }
}

@media screen and (max-width:768px) {

}

@media (max-width:768px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:450px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:450px) {
  .c10 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c9 {
    margin-top: 1rem;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:768px) {
  .c7 {
    padding: 1rem;
  }
}

@media (min-width:1170px) {
  .c7 {
    padding: 2rem;
  }
}

@media (max-width:768px) {
  .c15 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c15 p {
    margin-right: 0.5rem;
  }
}

@media (max-width:768px) {
  .c16 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c16 button {
    margin: 5px 0;
  }
}

@media (max-width:768px) {
  .c1 .ais-SearchBox-form {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 2rem;
  }

  .c1 .ais-SearchBox-submit {
    font-size: 1.6rem;
    padding: 1.4rem 6rem;
  }

  .c1 .ais-SearchBox-input {
    margin-right: 0;
    margin-bottom: 1rem;
    font-size: 1.6rem;
    padding: 1.4rem 2rem;
  }
}

@media (max-width:450px) {
  .c30 {
    grid-template-columns: repeat(auto-fill,100%);
  }
}

@media (max-width:1170px) {
  .c25 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c25 > *:not(:first-child):not(:last-child) {
    margin-top: 1.5rem;
  }
}

@media (max-width:768px) {
  .c38 {
    padding: 0 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding: 6rem 4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="ais-SearchBox c1"
    >
      <form
        action=""
        class="ais-SearchBox-form"
        novalidate=""
        role="search"
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input"
          maxlength="512"
          placeholder="Qual solução você busca?"
          required=""
          spellcheck="false"
          type="search"
          value=""
        />
        <button
          class="ais-SearchBox-submit"
          title="Submeta sua consulta"
          type="submit"
        >
          <svg
            class="ais-SearchBox-submitIcon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset"
          hidden=""
          title="Clear the search query."
          type="reset"
        >
          <svg
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
  <div
    class="c2"
  >
    <h1
      class="c3"
    >
      Agebavzi niko zaro.
    </h1>
    <div
      class="c4"
    >
      <div
        aria-label="Carrossel com imagens da tecnologia"
        role="listbox"
      >
        <div
          class="slick-slider c5 slick-initialized"
        >
          
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    class="c6"
                    src="http://127.0.0.1:3333/uploads/technologies/image.png"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          
          
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <h2
            class="c9"
          >
            Agebavzi niko zaro.
          </h2>
          <div
            class="c10"
          >
            <button
              aria-label="share"
              class="c11"
            >
              <svg
                class=""
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
                />
              </svg>
            </button>
            <div
              class="c12"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                />
              </svg>
              <span>
                1
              </span>
            </div>
          </div>
        </div>
        <p
          class="c13"
        >
          Gec hik gir.
        </p>
        <div
          class="c14"
        >
          <div
            class="c15"
          >
            <p>
              Custo de Implantação:
            </p>
            <h5>
              R$ 945.368.480,00
            </h5>
          </div>
          <div
            class="c16"
          >
            <button
              class="c17"
              color="hsla(0, 0%, 100%)"
              name="buyTechnology"
              title=""
              type="button"
            >
              Quero Adquirir Essa Tecnologia
            </button>
            <button
              class="c18"
              color="hsla(0, 0%, 100%)"
              name=""
              title=""
              type="button"
            >
              Quero Suporte Para Essa Tecnologia
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c19"
      data-tabs="true"
    >
      <ul
        class="c20"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-13"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="about"
          id="react-tabs-12"
          role="tab"
        >
          Sobre a Tecnologia
        </li>
        <li
          aria-controls="react-tabs-15"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="description"
          id="react-tabs-14"
          role="tab"
        >
          Caracterização
        </li>
        <li
          aria-controls="react-tabs-17"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="geolocation"
          id="react-tabs-16"
          role="tab"
        >
          Georeferenciamento
        </li>
        <li
          aria-controls="react-tabs-19"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="costs"
          id="react-tabs-18"
          role="tab"
        >
          Custos e Financiamento
        </li>
        <li
          aria-controls="react-tabs-21"
          aria-disabled="false"
          aria-selected="false"
          class="c21"
          data-testid="review"
          id="react-tabs-20"
          role="tab"
        >
          Relatos de Experiência
        </li>
        <li
          aria-controls="react-tabs-23"
          aria-disabled="false"
          aria-selected="true"
          class="c22 react-tabs__tab--selected"
          data-testid="attachments"
          id="react-tabs-22"
          role="tab"
          tabindex="0"
        >
          Documentos
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-12"
        class="c23"
        id="react-tabs-13"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-14"
        class="c23"
        id="react-tabs-15"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-16"
        class="c23"
        id="react-tabs-17"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-18"
        class="c23"
        id="react-tabs-19"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-20"
        class="c23"
        id="react-tabs-21"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-22"
        class="c24 react-tabs__tab-panel--selected"
        id="react-tabs-23"
        role="tabpanel"
      >
        <div
          class="c25"
        >
          <div
            class="c26"
          >
            <div
              class="c27"
            >
              <div
                class="c28"
                color="primary"
              >
                <h4>
                  Fotos
                </h4>
              </div>
              <span
                class="c29"
              >
                Fotos da Tecnologia
              </span>
              <div
                class="styles__UploadedImages-sc-13jh09q-9 c30"
              >
                <div
                  class="styles__IconRow-sc-13jh09q-15 c31"
                >
                  <img
                    class="styles__Media-sc-13jh09q-14 c32"
                    src="http://127.0.0.1:3333/uploads/technologies/image.png"
                  />
                </div>
              </div>
            </div>
            <div
              class="c27"
            >
              <div
                class="c28"
                color="primary"
              >
                <h4>
                  Documentos
                </h4>
              </div>
              <span
                class="c29"
              >
                Documentos
              </span>
              <div
                class="styles__UploadedDocuments-sc-13jh09q-8 c33"
              >
                <div
                  class="styles__IconRow-sc-13jh09q-15 c34"
                >
                  <a
                    class="styles__IconLink-sc-13jh09q-2 c35"
                    href="http://127.0.0.1:3333/uploads/technologies/image-1.pdf"
                  >
                    <svg
                      fill="currentColor"
                      height="2rem"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 384 512"
                      width="2rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"
                      />
                    </svg>
                     
                    image-1.pdf
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c36"
  >
    <h2
      class="c37"
    >
      common:relatedSolutions
    </h2>
    <div
      class="c38"
      data-testid="cards-wrapper"
    >
      <div
        class="c39"
      >
        <a
          class="c40"
          href="/t/agebavzi-niko-zaro"
          target="_self"
        >
          <div
            class="c41"
          >
            <img
              alt="Agebavzi niko zaro."
              src="card-image.jpg"
            />
            <div
              class="c42"
            >
              Tecnologias Sociais
            </div>
          </div>
        </a>
        <div
          class="c43"
        >
          <div
            class="c44"
          >
            <div
              class="c45"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                />
              </svg>
              <span>
                card:privateTechnology
              </span>
            </div>
            <div
              data-testid="card-heart"
            >
              <div
                class="c12"
              >
                <svg
                  color="hsl(166, 100%, 34%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(0, 0, 0);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
                <span>
                  1
                </span>
              </div>
            </div>
          </div>
          <a
            class="c40"
            href="/t/agebavzi-niko-zaro"
            target="_self"
          >
            <h3
              class="c46"
              data-testid="card-title"
            >
              Agebavzi niko zaro.
            </h3>
          </a>
          <div
            class="c47"
          >
            <span
              class="c48"
            >
              card:notDefinedInstitution
            </span>
            <div
              class="c49"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                />
              </svg>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
